Ádded image into html file.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 <body>
     <h1>Welcome To</h1>
-    <h1>My Programming World!!</h1>
+    <h1><span class="orange-color">My Programming</span> World!!</h1>
+    <h4>Build Clibmer and Train Stopper</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio adipisci soluta nemo eum exercitationem nostrum
+        esse asperiores natus. Inventore beatae animi repellat velit quod pariatur expedita minus hic minima cumque?</p>
+    <img src="images/nahid.png" alt="">
 </body>
 
 </html>
