--- a/index.html
+++ b/index.html
@@ -13,12 +13,22 @@
 </head>
 
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="orange-color">My Programming</span> World!!</h1>
-    <h4>Build Clibmer and Train Stopper</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio adipisci soluta nemo eum exercitationem nostrum
-        esse asperiores natus. Inventore beatae animi repellat velit quod pariatur expedita minus hic minima cumque?</p>
-    <img src="images/nahid.png" alt="">
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">My Programming</span> World!!</h1>
+            <h4>Build Clibmer and Train Stopper</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio adipisci soluta nemo eum exercitationem
+                nostrum
+                esse asperiores natus. Inventore beatae animi repellat velit quod pariatur expedita minus hic minima
+                cumque?
+            </p>
+            <a class="link" target="_blank" href="https://www.linkedin.com/in/nahid-sultan01/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/nahid.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
