--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
             <img src="images/nahid.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/nahid.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, officia voluptas! Deserunt fugit sed
+                laudantium quasi earum culpa cumque ratione!</p>
+            <a class="link" href="" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
