Added experience section and design in css file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">My Programming</span> World!!</h1>
@@ -29,7 +29,7 @@
             <img src="images/nahid.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/nahid.png" alt="">
         </div>
@@ -39,6 +39,24 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, officia voluptas! Deserunt fugit sed
                 laudantium quasi earum culpa cumque ratione!</p>
             <a class="link" href="" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="experience-item">
+                <h2 class="orange-color">2023 - Present | Full Stack Developer</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat ratione ipsa non a porro? Mollitia
+                    commodi laborum itaque recusandae saepe error quo, molestias impedit sed soluta porro deserunt
+                    aspernatur earum iusto! Repudiandae perspiciatis, autem amet quidem ex asperiores placeat tempora!
+                </p>
+            </div>
+            <div class="experience-item">
+                <h2 class="orange-color">2020-2021 | Junior Developer</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo facere dicta officia debitis
+                    expedita optio nemo repellat, nisi inventore quibusdam dolores provident quia rem explicabo non odio
+                    nobis recusandae quasi quam. Ipsa ex neque architecto error illum quaerat placeat.</p>
+            </div>
         </div>
     </section>
 </body>
