--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="experience-item">
+            <div id="full-stack" class="experience-item">
                 <h2 class="orange-color">2023 - Present | Full Stack Developer</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat ratione ipsa non a porro? Mollitia
                     commodi laborum itaque recusandae saepe error quo, molestias impedit sed soluta porro deserunt
                     aspernatur earum iusto! Repudiandae perspiciatis, autem amet quidem ex asperiores placeat tempora!
                 </p>
             </div>
-            <div class="experience-item">
+            <div id="junior-dev" class="experience-item">
                 <h2 class="orange-color">2020-2021 | Junior Developer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo facere dicta officia debitis
                     expedita optio nemo repellat, nisi inventore quibusdam dolores provident quia rem explicabo non odio
@@ -59,6 +59,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>@copyright 2022</p>
+    </footer>
 </body>
 
 </html>
